--- a/main.tex
+++ b/main.tex
@@ -304,7 +304,7 @@ plainpages=false,}
 
 \title{\sffamily {\Huge Algebra 1}\\[1em]
 Wintersemester 2024/25\\[1em]
-(Experimentelles) Vorlesungsskript}
+Vorlesungsskript}
 \author{\sffamily Dr. Denis Vogel}
 \date{\sffamily \today}
 
@@ -318,10 +318,9 @@ Wintersemester 2024/25\\[1em]
 
 \newpage
 \section*{Vorbemerkung}
-Dieses Vorlesungsskript hat experimentellen Charakter. Es entsteht dadurch, dass ChatGPT meine
-handschriftlichen Notizen in \LaTeX überträgt und diese in einen Text umwandelt, der Merkmale meiner eigenen Texte aufweist, die ich der KI antrainiert habe. Ich lese den Text gegen, überarbeite ihn und entferne insbesondere gröberen Unfug. Nichtsdesotrotz ist die Wahrscheinlichkeit hoch, dasss noch viele Fehler drin sind. Diese können Sie mir gerne per Mail melden. Die offizielle Referenz für die Vorlesung ist und bleibt für den Moment der handschriftliche Aufschrieb aus der Vorlesung.
 
-Bedanken möchte ich mich bei den Personen, die in den letzten Jahren viel Feedback zu meinem handschriftlichen Skript gegeben haben. Namentlich sei hier insbesondere Luka Thom\'{e} erwähnt,
+
+Ich möchte mich bei den Personen bedanken, die in den letzten Jahren viel Feedback zu meinem handschriftlichen Skript gegeben haben. Namentlich sei hier insbesondere Luka Thom\'{e} erwähnt,
 der hartnäckig sehr viele Neuerungen angeregt hat, die im Lauf der Zeit Eingang in das Skript gefunden haben.
 \newpage
 
